<resources>
    <string name="app_name">Wherever You Are BookClubs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="fiction_genre">Fiction Genre</string>
    <string name="action_adventure">Action/Adventure</string>
    <string name="mystery">Mystery</string>
    <string name="dystopian">Dystopian</string>
    <string name="fantasy">Fantasy</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="graphic_novel">Graphic Novel</string>
    <string name="lgbtq">LGBTQ+</string>
    <string name="literary_fiction">Literary Fiction</string>
    <string name="new_adult">New Adult</string>
    <string name="magical_realism">Magical Realism</string>
    <string name="comedy">Comedy</string>
    <string name="horror">Horror</string>
    <string name="young_adult">Young Adult</string>
    <string name="contemporary_fiction">Contemporary Fiction</string>
    <string name="romance">Romance</string>
    <string name="women_fiction">Women's Fiction</string>
    <string name="thriller_suspense">Thriller/Suspense</string>
    <string name="short_story">Short Story</string>
    <string name="historical_fiction">Historical Fiction</string>
    <string name="save">Save</string>
    <string name="pick_genre">Pick up to five (5) genres</string>
    <string name="non_fiction_genre">Non-Fiction Genre</string>
    <string name="next">Next</string>
    <string name="food_and_drink">Food and Drink</string>
    <string name="essays">Essays</string>
    <string name="art_photography">Art/Photography</string>
    <string name="true_crime">True-Crime</string>
    <string name="journalism">Journalism</string>
    <string name="scientific">Scientific</string>
    <string name="religion_spiritual">Religion/Spiritual</string>
    <string name="politics_social_sciences">Politics/Social Sciences</string>
    <string name="self_help">Self-Help</string>
    <string name="philosophy">Philosophy</string>
    <string name="biography">Biography</string>
    <string name="memoir_autobiography">Memoir/AutoBiography</string>
    <string name="history">History</string>
    <string name="travel">Travel</string>
    <string name="humor">Humor</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
</resources>