<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NonFictionGenre">

    <!--Toolbar-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/toolbar"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:subtitle="@string/pick_genre"
            app:subtitleTextColor="@color/white"
            app:title="@string/non_fiction_genre" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politics_social_sci_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/food_drink_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_and_drink"
        app:layout_constraintBottom_toTopOf="@+id/journalism_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/humor_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/biography_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/arts_photo_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/essays_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/essays"
        app:layout_constraintBottom_toTopOf="@+id/history_genre_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/relig_spirit_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/self_help_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/arts_photo_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art_photography"
        app:layout_constraintBottom_toTopOf="@+id/food_drink_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/memoir_bio_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <com.google.android.material.chip.Chip
        android:id="@+id/true_crime_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/true_crime"
        app:layout_constraintBottom_toTopOf="@+id/travel_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/journalism_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biography_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/journalism_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/journalism"
        app:layout_constraintBottom_toTopOf="@+id/relig_spirit_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/self_help_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/true_crime_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/food_drink_genre" />

    <com.google.android.material.chip.Chip
        android:id="@+id/scientific_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scientific"
        app:layout_constraintBottom_toTopOf="@+id/politics_social_sci_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/philosophy_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/relig_spirit_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/religion_spiritual"
        app:layout_constraintBottom_toTopOf="@+id/philosophy_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/essays_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/travel_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/journalism_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/politics_social_sci_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/politics_social_sciences"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scientific_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/self_help_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_help"
        app:layout_constraintBottom_toTopOf="@+id/essays_genre_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/journalism_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/humor_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/philosophy_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/philosophy"
        app:layout_constraintBottom_toTopOf="@+id/politics_social_sci_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/history_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scientific_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/relig_spirit_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/biography_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biography"
        app:layout_constraintBottom_toTopOf="@+id/true_crime_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/food_drink_genre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoir_bio_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/memoir_bio_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memoir_autobiography"
        app:layout_constraintBottom_toTopOf="@+id/food_drink_genre"
        app:layout_constraintEnd_toStartOf="@+id/arts_photo_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

    <com.google.android.material.chip.Chip
        android:id="@+id/history_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/politics_social_sci_genre_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/philosophy_genre_chip"
        app:layout_constraintTop_toBottomOf="@+id/essays_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/travel_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        app:layout_constraintBottom_toTopOf="@+id/scientific_genre_chip"
        app:layout_constraintEnd_toStartOf="@+id/relig_spirit_genre_chip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/true_crime_genre_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/humor_genre_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humor"
        app:layout_constraintBottom_toTopOf="@+id/self_help_genre_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/food_drink_genre"
        app:layout_constraintTop_toBottomOf="@+id/arts_photo_genre_chip" />

</androidx.constraintlayout.widget.ConstraintLayout>